--- a/Autenticacion/static/css/style_tabla.css
+++ b/Autenticacion/static/css/style_tabla.css
@@ -1,7 +1,7 @@
 
 .table-container {
     margin: 50px auto;
-    max-width: 900px;
+    max-width: 1100px;
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -16,6 +16,7 @@
 
 
 .table th, td {
+    padding: 40px;
     text-align: center;
 }
 
