--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_calendario.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_calendario.html
@@ -6,7 +6,9 @@ Modulo Calendario
 {% endblock %}
 
 {% block btnTitle %}
-Registrar un nuevo calendario
+<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+    Registrar un nuevo calendario
+</a>
 {% endblock %}
 
 {% block thead %}
