--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_planificacion.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_planificacion.html
@@ -5,8 +5,11 @@
 Modulo Planificación
 {% endblock %}
 
+
 {% block btnTitle %}
-Registra una nueva planificación
+<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+    Registra una nueva planificación
+</a>
 {% endblock %}
 
 {% block thead %}
