--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
@@ -17,7 +17,9 @@ Modulo Tipo Novedad
 {% endblock %}
 
 {% block btnTitle %}
-Registrar nuevo tipo de Novedad
+<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+    Registrar nuevo tipo de Novedad
+</a>
 {% endblock %}
 
 {% block thead %}
