--- a/Autenticacion/Modulos/Coordinador/Turno/templates/listado_turno.html
+++ b/Autenticacion/Modulos/Coordinador/Turno/templates/listado_turno.html
@@ -8,7 +8,9 @@ Módulo Turno
 
 
 {% block btnTitle %}
-Registrar un nuevo turno
+<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+    Registrar un nuevo turno
+</a>
 {% endblock %}
 
 {% block thead %}
