--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
@@ -13,8 +13,12 @@ Módulo Ubicación
     </div>
 </form>
 {% endblock %}
+
+
 {% block btnTitle %}
-Registrar nueva Ubicación
+<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+    Registrar nueva Ubicación
+</a>
 {% endblock %}
 
 
