--- a/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
+++ b/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
@@ -16,7 +16,9 @@ Módulo Personal
 {% endblock %}
 
 {% block btnTitle %}
-Registrar nuevo personal
+<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+    Registrar nuevo personal
+</a>
 {% endblock %}
 
 {% block thead %}
