--- a/Autenticacion/Modulos/Login/templates/rol/listado_rol.html
+++ b/Autenticacion/Modulos/Login/templates/rol/listado_rol.html
@@ -6,7 +6,9 @@ Módulo roles
 {% endblock %}
 
 {% block btnTitle %}
-Registrar un nuevo rol
+<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+    Registrar un nuevo rol
+</a>
 {% endblock %}
 
 {% block thead %}
