--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
@@ -17,7 +17,9 @@ Modulo Novedad
 {% endblock %}
 
 {% block btnTitle %}
-Registrar nueva novedad
+<a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
+    Registrar nueva novedad
+</a>
 {% endblock %}
 
 {% block thead %}
