--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -18,19 +18,18 @@
     top: 70px;
     left: 0;
     height: 100%;
-    width: 250px; /* Adjust as needed */
     z-index: 500; /* Lower than the navbar's z-index */
     background-color: #f8f9fa;
 }
 
 .side-bar {
-    padding: 20px;
+    padding: 30px 0;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    width: 275px;
+    width: 250px;
     background-color: var(--sidebar-bg);
     transition: width var(--transition-speed) ease;
-    overflow-y: scroll; /* Agrega scroll vertical si el contenido sobrepasa el espacio */
+    overflow: auto; /* Agrega scroll vertical si el contenido sobrepasa el espacio */
    
 }
 
@@ -247,4 +246,8 @@
 /* button click effect*/
 .Btn:active {
     transform: translate(2px, 2px);
+}
+
+.logout {
+    margin-bottom: 40px;
 }
