--- a/Autenticacion/static/css/modulos.css
+++ b/Autenticacion/static/css/modulos.css
@@ -3,11 +3,12 @@
     justify-content: center;
     padding: 50px 20px;
     align-items: center;
+    margin-top: 4rem;
 }
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
     gap: 80px; 
     width: 100%;
     max-width: 1200px;
@@ -25,12 +26,13 @@
     cursor: pointer;
 }
 
+
 .cards > a{
     color: inherit;
     text-decoration: none;
     display: block;
-    height: 100%;
-    width: 100%;
+    width: 200px;
+    justify-self: center;
 }
 
 .card .img-container{
