--- a/Autenticacion/static/css/modulos.css
+++ b/Autenticacion/static/css/modulos.css
@@ -71,7 +71,7 @@ header {
 
 
 .h1-x {
-    color: #d9534f;
+    color: #d11e18;
     font-size: 24px;
     margin-bottom: 10px;
 }
@@ -86,20 +86,17 @@ header {
     padding: 10px 20px;
     font-size: 16px;
     color: #fff;
-    background-color: #007bff;
+    background-color: #236bb8;
     border: none;
     border-radius: 4px;
+    transition: 1s;
     text-decoration: none;
 }
 .btn-x:hover {
-    background-color: #0056b3;
+    background-color: #3f93ec;
 }
 
 
-/* 
-.card img{
-    width: 150px;
-} */
 
 .card .card-body{
     background-color: #12171e;
