Modificaciones en los modelos

--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_calendario.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_calendario.html
@@ -10,7 +10,7 @@
         </div>
         <div class="div">
             <h5>Fecha de Inicio</h5>
-            {{ form.Fecha_inicio }}
+            {{ form.fecha_inicio }}
         </div>
     </div>
     <div class="input-div one">
@@ -19,7 +19,7 @@
         </div>
         <div class="div">
             <h5>Fecha Fin</h5>
-            {{ form.Fecha_fin }}
+            {{ form.fecha_fin }}
         </div>
     </div>
 </div>
