--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_planificacion.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_planificacion.html
@@ -10,7 +10,7 @@
         </div>
         <div class="div">
             <h5> Usuario </h5>
-            {{ form.Usuario }}
+            {{ form.usuario }}
         </div>
     </div>
 
@@ -20,7 +20,7 @@
         </div>
         <div class="div">
             <h5>Periodo</h5>
-            {{ form.Calendario }}
+            {{ form.calendario }}
         </div>
     </div>
     <div class="input-div one">
@@ -29,7 +29,7 @@
         </div>
         <div class="div">
             <h5>Turno</h5>
-            {{ form.Turno }}
+            {{ form.turno }}
         </div>
     </div>
     <div class="input-div one">
@@ -38,7 +38,7 @@
         </div>
         <div class="div">
             <h5>Ubicación</h5>
-            {{ form.Ubicacion }}
+            {{ form.ubicacion }}
         </div>
     </div>
 </div>
