--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/registrar_novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/registrar_novedad.html
@@ -10,7 +10,7 @@
         </div>
         <div class="div">
             <h5>Tipo de Novedad</h5>
-            {{ form.TipoNovedad }}
+            {{ form.tiponovedad }}
         </div>
     </div>
 
@@ -20,7 +20,7 @@
         </div>
         <div class="div">
             <h5>Descripción de la novedad</h5>
-            {{ form.Descripcion }}
+            {{ form.descripcion }}
         </div>
     </div>
 </div>
