--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/registrar_tipNovedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/registrar_tipNovedad.html
@@ -9,7 +9,7 @@
         </div>
         <div class="div">
             <h5>Tipo de Novedad</h5>
-            {{ form.Descripcion }}
+            {{ form.descripcion }}
         </div>
     </div>
 </div>
