--- a/Autenticacion/Modulos/Coordinador/Turno/templates/crear_turno.html
+++ b/Autenticacion/Modulos/Coordinador/Turno/templates/crear_turno.html
@@ -9,7 +9,7 @@
         </div>
         <div class="div">
             <h5> Hora de Inicio </h5>
-            {{ form.Hora_inicio }}
+            {{ form.hora_inicio }}
         </div>
     </div>
 
@@ -19,7 +19,7 @@
         </div>
         <div class="div">
             <h5>Hora Fin</h5>
-            {{ form.Hora_fin }}
+            {{ form.hora_fin }}
         </div>
     </div>
 </div>
