--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/registrar_ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/registrar_ubicacion.html
@@ -17,7 +17,7 @@
             </div>
             <div class="div">
                 <h5> Lugar </h5>
-                {{ form.Lugar }}
+                {{ form.lugar }}
             </div>
         </div>
         <div class="input-div one">
@@ -26,7 +26,7 @@
             </div>
             <div class="div">
                 <h5> Sector </h5>
-                {{ form.Sector }}
+                {{ form.sector }}
             </div>
         </div>
 
@@ -36,7 +36,7 @@
             </div>
             <div class="div">
                 <h5> Calle Principal </h5>
-                {{ form.CallePrincipal }}
+                {{ form.calleprincipal }}
             </div>
         </div>
     </div>
