--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -55,7 +55,7 @@
 
                     {% if page_obj.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">previous</a>
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
                     </li>
                     {% endif %}
 
@@ -73,7 +73,7 @@
 
                     {% if page_obj.has_next %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">next</a>
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -84,7 +84,7 @@
     {% endblock %}
 </div>
 
-<div class="modal fade" id="insertar" role="dialgo"></div>
+<div class="modal fade" id="insertar" role="dialog"></div>
 <div class="modal fade" id="editar" role="dialog"></div>
 
 
