--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_planificacion.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_planificacion.html
@@ -38,7 +38,7 @@ Modulo Planificación
         <form action="{% url 'calendario:InactivarActivarPlanificacion' i.id %}" method="post" style="display: inline;">
             {% csrf_token %}
 
-            {% if i.Estado %}
+            {% if i.estado %}
             <button type="submit" class="btn btn-danger">Inactivar</button> 
             {% else %}
             <button type="submit" class="btn btn-success">Activar</button> 
