--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
@@ -47,7 +47,7 @@ Modulo Novedad
         <form action="{% url 'novedad:inactivar_activar_novedad' pk=nov.id %}" method="post" style="display: inline;">
             {% csrf_token %}
 
-            {% if nov.Estado %}
+            {% if nov.estado %}
             <button type="submit" class="btn btn-danger">Inactivar</button> 
             {% else %}
             <button type="submit" class="btn btn-success">Activar</button> 
