--- a/Autenticacion/Modulos/Coordinador/Turno/templates/listado_turno.html
+++ b/Autenticacion/Modulos/Coordinador/Turno/templates/listado_turno.html
@@ -38,7 +38,7 @@ Módulo Turno
         <form action="{% url 'turno:inactivar_activar_turno' i.id %}" method="post" style="display: inline;">
             {% csrf_token %}
 
-            {% if i.Estado %}
+            {% if i.estado %}
             <button type="submit" class="btn btn-danger">Inactivar</button> 
             {% else %}
             <button type="submit" class="btn btn-success">Activar</button> 
