--- a/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
+++ b/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
@@ -52,7 +52,7 @@ Módulo Personal
             Editar
         </a>
     
-        <form action="{% url 'login:inactivar_objeto' pk=i.id %}" method="post" style="display: inline;">
+        <form action="{% url 'login:inactivar_usuario' pk=i.id %}" method="post" style="display: inline;">
             {% csrf_token %}
 
             {% if i.estado %}
