--- a/Autenticacion/static/css/modulos.css
+++ b/Autenticacion/static/css/modulos.css
@@ -1,3 +1,7 @@
+.container-y, .container-x {
+    font-family: 'Arima',sans-serif;
+}
+
 .cards-container {
     display: flex;
     justify-content: center;
@@ -56,24 +60,33 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* Ensure this is higher than the sidebar's z-index */
+    z-index: 1000; 
     
 }
 
 
+.container-y {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center; 
+    text-align: center;    
+    height: 100vh;    
+}
+
+
 .container-x {
-    margin-top: 200px;
-    text-align: center;
-    background: white;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    text-align: center;    
+    height: 100vh;  
 }
 
 
 .h1-x {
     color: #d11e18;
-    font-size: 24px;
+    font-size: 30px;
     margin-bottom: 10px;
 }
 
@@ -82,6 +95,7 @@ header {
     color: #666;
     margin-bottom: 20px;
 }
+
 .btn-x {
     display: inline-block;
     padding: 10px 20px;
@@ -93,6 +107,7 @@ header {
     transition: 1s;
     text-decoration: none;
 }
+
 .btn-x:hover {
     background-color: #3f93ec;
 }
