--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -10,8 +10,12 @@
     --transition-speed: 0.5s;
 }
 
-
-
+.modal {
+    --bs-modal-width: 700px !important; /* Cambia el ancho del modal */
+    --bs-modal-bg: #f8f9fa !important; /* Cambia el fondo del modal */
+    --bs-modal-border-color: #dee2e6 !important; /* Cambia el color del borde */
+    --bs-modal-border-width: 2px !important; /* Cambia el grosor del borde */
+}
 
 .side-bar {
     position: fixed;
