--- a/Autenticacion/Modulos/Login/templates/rol/listado_rol.html
+++ b/Autenticacion/Modulos/Login/templates/rol/listado_rol.html
@@ -32,12 +32,11 @@ Módulo roles
     </td>
     <td>
         
-        {% comment %} <form action="{% url 'login:editar_rol' i.id %}" method="get" style="display: inline;">
-            <button type="submit" class="btn btn-dark">Editar</button>
-        </form> {% endcomment %}
+    {% if request.user.rol is not None %}
         <a class="btn btn-dark" onclick="abrir_modal_editar('{% url 'login:editar_rol' i.id %}')">
             Editar
         </a>
+    {%endif %}
         <form action="{% url 'login:inactivar_rol' pk=i.id %}" method="post" style="display: inline;">
             {% csrf_token %}
 
