--- a/Autenticacion/static/css/modulos.css
+++ b/Autenticacion/static/css/modulos.css
@@ -1,6 +1,7 @@
-.container-y, .container-x {
+.container-y, .container-x, .card-text{
     font-family: 'Arima',sans-serif;
 }
+
 
 .cards-container {
     display: flex;
@@ -65,6 +66,49 @@ header {
 }
 
 
+.welcome-container {
+    background-color: #d2d4aa; /* Fondo suave (verde pastel claro) */
+    padding: 25px;
+    border-radius: 20px;
+    box-shadow: 30px 20px 10px rgba(0, 0, 0, 0.1); /* Sombra más definida */
+    max-width: 60%;
+    text-align: left;
+    line-height: 1.8; /* Espaciado óptimo */
+    font-family: "Arial", sans-serif;
+    font-size: 1.2rem;
+}
+
+.welcome-title {
+    font-size: 1.8rem; /* Tamaño mayor para resaltar */
+    font-weight: 700; /* Negrita */
+    text-align: justify;
+    margin-bottom: 10px;
+}
+
+.welcome-description {
+    margin: 15px 0;
+}
+
+.welcome-list {
+    list-style-type: disc;
+    margin-left: 20px; /* Ajuste del margen de la lista */
+    padding-left: 15px;
+    font-size: 1.1rem;
+}
+
+.welcome-list li {
+    margin-bottom: 10px;
+}
+
+.welcome-footer {
+    font-style: italic;
+    text-align: center;
+    color: #2e7d32; /* Verde más oscuro para el cierre */
+    margin-top: 20px;
+}
+
+
+
 .container-y {
     display: flex;
     flex-direction: column;
@@ -86,7 +130,8 @@ header {
 
 .h1-x {
     color: #d11e18;
-    font-size: 30px;
+    font-size: 500;
+    font-weight: 700;
     margin-bottom: 10px;
 }
 
