--- a/Autenticacion/templates/configuracion_inicial.html
+++ b/Autenticacion/templates/configuracion_inicial.html
@@ -40,8 +40,11 @@ Bienvenida
         </ul>
         <p class="welcome-description">
             Este proceso es fundamental para dejar el sistema completamente operativo. 
-            Una vez finalizado estos pasos, las credenciales actuales que utilizaste para llevar a cabo
-            esta configuración inicial serán desactivadas, para proteger el acceso.
+            Una vez completados estos pasos, las credenciales que utilizaste para llevar a cabo
+            esta configuración inicial serán desactivadas como medida de seguridad, protegiendo así 
+            el acceso al sistema.
+
+
         </p>
         <p class="welcome-footer">¡Gracias por tu colaboración!</p>
            
