--- a/Autenticacion/static/css/modulos.css
+++ b/Autenticacion/static/css/modulos.css
@@ -67,7 +67,7 @@ header {
 
 
 .welcome-container {
-    background-color: #e1e2c7; /* Fondo suave (verde pastel claro) */
+    background-color: #ebebde; /* Fondo suave (verde pastel claro) */
     padding: 20px;
     border-radius: 15px;
     box-shadow: 30px 20px 10px rgba(0, 0, 0, 0.1); /* Sombra más definida */
